arrumei o css final

--- a/Views/Usuario/HomeNutri.cshtml
+++ b/Views/Usuario/HomeNutri.cshtml
@@ -1354,6 +1354,27 @@
             background-color: #555;
         }
 
+        body.dark-mode .virtual-select,
+        body.dark-mode .virtual-select .options-wrapper,
+        body.dark-mode .virtual-select .search-wrapper,
+        body.dark-mode .virtual-select .option,
+        body.dark-mode .virtual-select .selected, 
+        body.dark-mode  .vscomp-toggle-button,
+        body.dark-mode #input-metaPeso {
+            background-color: #1e1e1e !important; /* Fundo preto */
+            color: #fff !important; /* Texto branco */
+            border-color: #444 !important; /* Borda cinza escuro */
+        }
+
+
+        .alimentos-selects{
+            justify-content: center;
+            text-align: center;
+            align-items: center;
+            display: flex;
+            gap: 10px;
+        }
+
 
         .btn-chat,
         .btn-enviar-dieta,
